--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,6 @@ jobs:
         run: npm ci
       - name: Bundle
         run: npm run build
+      - name: Vercel Action
+        uses: amondnet/vercel-action@v25.2.0
+            
